--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.html
@@ -1,3 +1,195 @@
 <app-page-header value="Spotify"></app-page-header>
 
-<section class="page"></section>
+<section class="page spotify-home">
+  <div class="spotify-playlists">
+    <h2 class="spotify-playlists__title">Spotify Playlists</h2>
+
+    <div class="spotify-playlists__list">
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="spotify-playlists">
+    <h2 class="spotify-playlists__title">Spotify Playlists</h2>
+
+    <div class="spotify-playlists__list">
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits oday's Top Hit oday's Top Hit</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="spotify-playlists">
+    <h2 class="spotify-playlists__title">Spotify Playlists</h2>
+
+    <div class="spotify-playlists__list">
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+      <div class="spotify-playlists__list-item">
+        <img
+          class="spotify-playlists__list-item-img"
+          src="./images/Today's Top Hits.jpg"
+          loading="lazy"
+        />
+        <h4 class="spotify-playlists__list-item-title">Today's Top Hits</h4>
+        <p class="spotify-playlists__list-item-subtitle">
+          Olivia Rodrigo is on top of the Hottest 50!
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
