--- a/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meeting-room/meeting-room.component.html
@@ -1,4 +1,4 @@
-<div class="meeting-room">
+<!-- <div class="meeting-room">
   <div class="meeting-room__left">
     <div class="meeting-room__main">
       <div class="meeting-room__main-header">
@@ -115,4 +115,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
