--- a/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.html
@@ -1,15 +1,14 @@
-<div className="flex flex-col px-8 space-y-1 pb-28 text-white">
-  <div
-    className="sticky top-0 z-20 bg-black flex justify-between lg:grid grid-cols-2 p-2 px-4 border-b-[0.1px] text-xs text-gray-400 uppercase border-white/20 mt-10 mb-5"
-  >
-    <div className="flex items-center space-x-5 mr-2">
-      <p className="text-base">#</p>
+<div class="playlist-songs">
+  <div class="playlist-songs__header">
+    <div class="playlist-songs__header-left">
+      <p class="playlist-songs__header-number">#</p>
       <p>Title</p>
     </div>
 
-    <div className="flex items-center justify-between">
-      <p className="hidden lg:inline">Album</p>
-      <p><mat-icon>clock</mat-icon></p>
+    <div class="playlist-songs__header-right">
+      <p class="playlist-songs__header-album">Album</p>
+      <p class="playlist-songs__header-date">Date Added</p>
+      <p><mat-icon>access_time</mat-icon></p>
     </div>
   </div>
 
