--- a/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.scss
@@ -1,3 +1,61 @@
+@import "vars";
+
 .playlist-songs {
-    
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.25rem;
+  padding-bottom: 7rem;
+
+  &__header {
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    border-bottom: 0.1px solid #4b4b4b;
+    font-size: 0.75rem;
+    color: #4a4e55;
+    text-transform: uppercase;
+    border-bottom-color: rgba(63, 63, 63, 0.2);
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+
+    @media (min-width: $md) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    &-left {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      margin-right: 2px;
+    }
+
+    &-number {
+      width: 1.5rem;
+    }
+
+    &-right {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      & mat-icon {
+        width: 20px;
+        height: 20px;
+        font-size: 20px;
+      }
+    }
+
+    &-album,
+    &-date {
+      display: none;
+      @media (min-width: $md) {
+        display: inline;
+      }
+    }
+  }
 }
