--- a/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/components/playlist-songs/playlist-songs.component.html
@@ -1,4 +1,4 @@
-<div class="playlist-songs">
+<!-- <div class="playlist-songs">
   <div class="playlist-songs__header">
     <div class="playlist-songs__header-left">
       <p class="playlist-songs__header-number">#</p>
@@ -12,7 +12,42 @@
     </div>
   </div>
 
-  <ng-container>
-    <app-playlist-song></app-playlist-song>
-  </ng-container>
-</div>
+  <div class="playlist-songs__list">
+    <ng-container
+      *ngFor="let song of songs$ | async as songs; let order = index"
+    >
+      <app-playlist-song [song]="song" [order]="order + 1"></app-playlist-song>
+    </ng-container>
+  </div>
+</div> -->
+
+<table class="playlist-songs">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Title</th>
+      <th class="playlist-songs__album-header">Album</th>
+      <th class="playlist-songs__date-header">Date Added</th>
+      <th>
+        <mat-icon class="playlist-songs__duration-header">access_time</mat-icon>
+      </th>
+    </tr>
+  </thead>
+  <tr class="separator" colspan="2"></tr>
+
+  <tbody>
+    <tr *ngFor="let song of songs$ | async as songs; let order = index">
+      <td>{{ order + 1 }}</td>
+      <td class="playlist-song-details">
+        <img class="playlist-song-img" [src]="'Url'" alt="" />
+        <div class="playlist-song__names">
+          <p class="playlist-song-name">{{ song.song }}</p>
+          <p class="playlist-song-artist">{{ song.artist }}</p>
+        </div>
+      </td>
+      <td class="playlist-songs__album-cell">{{ song.album }}</td>
+      <td class="playlist-songs__date-cell">{{ song.createdAt }}</td>
+      <td>3:12</td>
+    </tr>
+  </tbody>
+</table>
