--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/spotify-dashboard.component.scss
@@ -26,6 +26,7 @@
         width: 100%;
         height: 180px;
         margin-bottom: 10px;
+        border-radius: 4px;
         background: #d3d3d3;
       }
 
