--- a/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.html
@@ -1,33 +1,84 @@
 <ng-container *ngIf="currentSong">
-  <div class="player" [class.hidden]="!currentSongId">
-    <div class="song-info">
-      <div class="album-art">
-        <img [src]="'url'" alt="Artic Monkeys" />
-      </div>
-      <div class="text-info">
-        <p class="song-name">505</p>
-        <p class="artist-name">Artic Monkeys</p>
+  <div class="spotify-player" *ngIf="expand">
+    <div class="spotify-player__info">
+      <img class="spotify-player__info-img" src="" alt="" />
+      <div class="spotify-player__info-details">
+        <p class="spotify-player__info-song">I Wanna Be Yours</p>
+        <p class="spotify-player__info-artist">Artic Monkeys</p>
       </div>
     </div>
 
-    <div class="controls">
-      <button (click)="handlePlayPause()">
-        <mat-icon *ngIf="isSongPlaying">pause</mat-icon>
-        <mat-icon *ngIf="!isSongPlaying">play_arrow</mat-icon>
-      </button>
+    <div class="spotify-player__player">
+      <div class="spotify-player__player-actions">
+        <button class="spotify-player__player-actions-move">
+          <mat-icon>skip_previous</mat-icon>
+        </button>
 
-      <!-- <button *ngIf="/* shuffle button */"></button>
-      <button *ngIf="/* rewind button */"></button>
-      <button *ngIf="/* fast-forward button */"></button> -->
+        <button
+          *ngIf="isSongPlaying"
+          class="spotify-player__player-actions-pause"
+        >
+          <mat-icon>pause_circle</mat-icon>
+        </button>
 
-      <button (click)="handleVolumeButtons()">
-        <mat-icon *ngIf="volume === 0">volume_mute</mat-icon>
-        <mat-icon *ngIf="volume > 0">volume_up</mat-icon>
-      </button>
+        <button
+          *ngIf="!isSongPlaying"
+          class="spotify-player__player-actions-pause"
+        >
+          <mat-icon>play_circle</mat-icon>
+        </button>
+
+        <button class="spotify-player__player-actions-move">
+          <mat-icon>skip_next</mat-icon>
+        </button>
+      </div>
+      <div>
+        <input type="range" class="spotify-player__player-time" />
+      </div>
     </div>
 
-    <div class="volume">
-      <input type="range" [(ngModel)]="volume" min="0" max="100" />
+    <div class="spotify-player__volume">
+      <button *ngIf="volume === 0" class="spotify-player__volume-button">
+        <mat-icon>volume_off</mat-icon>
+      </button>
+      <button *ngIf="volume > 0" class="spotify-player__volume-button">
+        <mat-icon>volume_up</mat-icon>
+      </button>
+
+      <input
+        type="range"
+        class="spotify-player__volume-range"
+        min="0"
+        max="100"
+      />
+
+      <div class="">
+        <button
+          *ngIf="isSongPlaying"
+          class="spotify-player__player-actions-pause"
+        >
+          <mat-icon>pause_circle</mat-icon>
+        </button>
+
+        <button
+          *ngIf="!isSongPlaying"
+          class="spotify-player__player-actions-pause"
+        >
+          <mat-icon>play_circle</mat-icon>
+        </button>
+      </div>
+
+      <button class="spotify-player__close" (click)="toggleExpandPlayer()">
+        <mat-icon>close_fullscreen</mat-icon>
+      </button>
     </div>
   </div>
+
+  <button
+    *ngIf="!expand"
+    (click)="toggleExpandPlayer()"
+    class="spotify-player-button"
+  >
+    <img src="assets/images/integrations/spotify.svg" alt="Spotify" />
+  </button>
 </ng-container>
