--- a/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.scss
@@ -1,83 +1,135 @@
-.player {
-  position: absolute;
+@import "vars";
+
+.spotify-player {
+  width: 100%;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #121212;
-  border-top: 0.1px solid rgba(255, 255, 255, 0.1);
-  padding: 20px 16px;
-  z-index: 5;
+  background: linear-gradient(to bottom, $background-sidebar, #082b14);
+
+  z-index: 1;
+
+  padding: 12px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #fff;
 
-  @media (min-width: 768px) {
-    padding: 16px 24px;
-  }
-
-  &.hidden {
-    display: none;
-  }
-
-  .song-info {
+  button {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-
-    .album-art {
-      // Adjust these values as needed for album art sizing
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      overflow: hidden;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    .text-info {
-      .song-name {
-        color: #fff;
-        font-size: 14px;
-        font-weight: 500;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      .artist-name {
-        color: rgba(255, 255, 255, 0.6);
-        font-size: 12px;
-      }
-    }
   }
 
-  .controls {
+  &__info {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 12px;
 
-    button {
-      background: transparent;
-      border: none;
-      cursor: pointer;
+    &-img {
+      width: 50px;
+      height: 50px;
+      background: #ccc;
+      border-radius: 4px;
+    }
 
-      .fa-solid {
-        font-size: 16px;
+    &-artist {
+      font-size: 12px;
+      color: #888888;
+    }
+  }
+
+  &__player {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 8px;
+
+    @media screen and (max-width: $sm) {
+      display: none;
+    }
+
+    &-actions {
+      display: flex;
+      gap: 14px;
+
+      mat-icon {
+        width: 36px;
+        height: 36px;
+        font-size: 36px;
+      }
+
+      &-move {
+        color: #bbbbbb;
+
+        mat-icon {
+          width: 28px;
+          height: 28px;
+          font-size: 28px;
+        }
+      }
+    }
+
+    &-time {
+      width: 360px;
+      height: 2px;
+
+      &::-webkit-slider-thumb {
+        width: 2px;
+        height: 2px;
       }
     }
   }
 
-  .volume {
+  &__volume {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 12px;
 
-    input[type="range"] {
-      width: 60px;
-      @media (min-width: 768px) {
-        width: 96px;
+    mat-icon {
+      width: 20px;
+      height: 20px;
+      font-size: 20px;
+    }
+
+    &-button {
+      @media screen and (max-width: $sm) {
+        display: none !important;
       }
     }
+
+    &-range {
+      width: 100px;
+      height: 2px;
+
+      @media screen and (max-width: $sm) {
+        display: none;
+      }
+    }
+  }
+
+  &-button {
+    position: fixed;
+    bottom: 22px;
+    right: 22px;
+    padding: 4px;
+    border-radius: 6px;
+    background: $background-sidebar;
+
+    @media screen and (max-width: $sm) {
+      bottom: 8px;
+      right: 8px;
+    }
+
+    & img {
+      width: 28px;
+      height: 28px;
+    }
+  }
+
+  &__close {
+    margin-left: 14px;
   }
 }
