--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.scss
@@ -56,6 +56,7 @@
     justify-content: center;
     align-items: center;
     gap: 12px;
+    margin-top: 6px;
 
     &:hover {
       color: #f9fafe;
