--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -1,6 +1,7 @@
 @import "vars";
 
 .sidebar {
+  position: relative;
   width: 280px;
   height: 100%;
   overflow-y: auto;
@@ -24,6 +25,7 @@
     justify-content: center;
     align-items: center;
     gap: 12px;
+    margin-top: 6px;
 
     &:hover {
       color: #f9fafe;
